{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 32,
  "lineage": "ed11830e-25cf-53b7-e52f-1bb6e806d9d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526286722:internet-gateway/igw-0c35abe1461f11828",
            "id": "igw-0c35abe1461f11828",
            "owner_id": "010526286722",
            "tags": {
              "Name": "My-Internet-Gateway"
            },
            "tags_all": {
              "Name": "My-Internet-Gateway"
            },
            "vpc_id": "vpc-07db00bf03689e09a"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526286722:route-table/rtb-02ae4660ea9427a02",
            "id": "rtb-02ae4660ea9427a02",
            "owner_id": "010526286722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c35abe1461f11828",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My-Route-table"
            },
            "tags_all": {
              "Name": "My-Route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07db00bf03689e09a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d96a2ac95f51451",
            "route_table_id": "rtb-02ae4660ea9427a02",
            "subnet_id": "subnet-06d20c4752aa51809"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rta",
            "aws_subnet.sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MySg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526286722:security-group/sg-088e64b9a93ce0350",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088e64b9a93ce0350",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241101185404702100000001",
            "name_prefix": "terraform-",
            "owner_id": "010526286722",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My-Security-group"
            },
            "tags_all": {
              "Name": "My-Security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07db00bf03689e09a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526286722:subnet/subnet-06d20c4752aa51809",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d20c4752aa51809",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010526286722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-Subnet"
            },
            "tags_all": {
              "Name": "My-Subnet"
            },
            "vpc_id": "vpc-07db00bf03689e09a"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526286722:vpc/vpc-07db00bf03689e09a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-04a00e0b009736960",
            "default_route_table_id": "rtb-068d530fb3388181f",
            "default_security_group_id": "sg-011a41001e2cfa811",
            "dhcp_options_id": "dopt-03fb99bb688824ce4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07db00bf03689e09a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068d530fb3388181f",
            "owner_id": "010526286722",
            "tags": {
              "Name": "My-Vpc"
            },
            "tags_all": {
              "Name": "My-Vpc"
            }
          }
        }
      ]
    }
  ]
}